btn service center

--- a/page-sirvice/service-css/service.css
+++ b/page-sirvice/service-css/service.css
@@ -832,6 +832,8 @@ body {
     border-radius: 5px;
     border: none;
     margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
   }
 
